<resources>
    <string-array name="home_tabs_title">
        <item>Home</item>
        <item>Profile</item>
        <item>About</item>
    </string-array>

    <string name="app_name">YesNoMaybe</string>
    <string name="error_unexpecter_api_server_error">Unexpected server error, please try again</string>
    <string name="no_internet_error">Please verify your inteernet connection</string>
    <string name="error_connecting_google_services">Error connection Google Play Services</string>
    <string name="instructions">Ask the magical internet fortune teller yes or no questions and click the button!</string>
    <string name="ask">ask</string>
    <string name="question_bar_title">Question</string>
    <string name="about_bar_title">About</string>
    <string name="profile_bar_title">Profile</string>
    <string name="answer_title">Your answer is</string>
    <string name="ask_again">Ask again</string>
    <string name="credits">Designed, developed and published by Caro Val</string>
    <string name="app_goal">This app has been developed as part of a digital business and technological partenship tutorial, read about it in Medium!</string>
    <string name="github">You can see the app code in github!</string>
    <string name="linkedin">Let\'s keep in touch!</string>
    <string name="github_url">https://www.github.com/carovaldezg</string>
    <string name="linkedin_url">https://www.linkedin.com/in/carovaldezg</string>
    <string name="medium_url">https://medium.com/@carolina.valdez</string>
    <string name="error_no_browser_found">There are no browsers installed in your device.</string>
    <string name="name">Name: </string>
    <string name="google_user_name">User name: </string>
    <string name="email">Email: </string>
    <string name="log_out">Log out</string>
    <string name="no_user_info_found">No user info found</string>
    <string name="share_body_text">Fortune teller YesNoMaybeApp has told me my answer is: </string>
    <string name="share_subject">Try YesNoMaybeApp!</string>
    <string name="share_via">Share via</string>

</resources>
