<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/title_bar"
        android:id="@+id/fragment_profile_title_bar_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacing_large_extra"
        android:layout_marginRight="@dimen/spacing_large_extra"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:background="@drawable/rounded_corners_layout"
        android:gravity="center">

        <TextView
            android:id="@+id/fragment_profile_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_huge_margin"
            android:layout_marginBottom="@dimen/spacing_medium_extra"
            android:textAlignment="center"
            style="@style/LargeText.Blue"/>

        <TextView
            android:id="@+id/fragment_profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_medium_extra"
            android:text="@string/name"
            style="@style/MediumText.Blue"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/fragment_profile_user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_huge_margin"
            android:text="@string/email"
            style="@style/MediumText.Blue"
            android:textAlignment="center"/>

    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginBottom="170dp"
        android:src="@drawable/caropic"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/fragment_profile_log_out_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginTop="@dimen/spacing_medium_extra"
        android:layout_marginBottom="@dimen/spacing_huge"
        android:text="@string/log_out"
        android:gravity="center"
        style="@style/LargeText.Shamrock" />

</FrameLayout>