<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="1">

    <include
        layout="@layout/title_bar"
        android:id="@+id/fragment_question_title_bar_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/fragment_about_blue_layout_relative"
            android:layout_width="match_parent"
            android:layout_height="300dp">

            <RelativeLayout
                android:id="@+id/fragment_about_blue_layout"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@drawable/background_blue_gradient">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/logo"
                    android:layout_centerInParent="true"/>

            </RelativeLayout>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="-50dp"
                android:src="@drawable/caropic"
                android:layout_alignBottom="@+id/fragment_about_blue_layout"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_large"
        android:orientation="vertical"
        android:background="@drawable/rounded_corners_layout"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium_extra"
            android:text="@string/credits"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium_extra"
            android:text="@string/app_goal"
            android:textAlignment="center"/>

        <view
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/spacing_large_extra"
            android:layout_marginEnd="@dimen/spacing_large_extra"
            android:layout_marginBottom="@dimen/spacing_medium_extra"/>

        <LinearLayout
            android:id="@+id/fragment_about_github_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_medium_extra"
                android:text="@string/github"
                android:textAlignment="center"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_about_keep_in_touch_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_medium_extra"
                android:text="@string/linkedin"
                android:textAlignment="center"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>